# kdevhga

./: Doxyfile  Makefile.am  configure.in.in  export.py  kdevhga.kdevelop  kdevhga.lsm  prj.cmake
admin/: acinclude.m4.in
doc/en/: Makefile.am  index.docbook
kdevhga/: CMakeLists.txt  Makefile.am  gawords.cpp  gawords.h  gchromoh.cpp  gchromoh.h  ghga.cpp  ghga.h  ginsth.cpp  ginsth.h  gnodeinfos.cpp  gnodeinfos.h  kappoptions.cpp  kappoptions.h  kappoptions.ui  kappoptions.ui.h  kdevhga.cpp  kdevhga.desktop  kdevhga.h  kdevhgadoc.cpp  kdevhgadoc.h  kdevhgaui.rc  kdevhgaview.cpp  kdevhgaview.h  kheuristic.cpp  kheuristic.h  kheuristic.ui  khgagaview.cpp  khgagaview.h  khgaheuristicview.cpp  khgaheuristicview.h  khgaprjview.cpp  khgaprjview.h  khgaview.cpp  khgaview.h  khgaview.ui  kprjview.cpp  kprjview.h  kprjview.ui  main.cpp  (+5 more)
kdevhga/templates/: cpp_template  header_template
po/: kdevhga.pot
